tests/should_fail/type_option_assign_wrong_inner.nv
module type_option_assign_wrong_inner
// SHOULD FAIL: Option(Int) cannot hold a String
let x: Option(Int) = Some("hello")
